corrections finales- icon size Fa - gap responsive

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a {
 .card {
     border-radius: 20px;
     background-color: white;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
 .card img {
@@ -171,7 +171,7 @@ form {
 }
 input {
     width: 150px;
-    padding: 0px 14px;
+    padding: 0px 24px;
     height: 47px;
     border: none;
     border-top: 1px solid #F2F2F2;
@@ -214,10 +214,11 @@ input::placeholder{
 .button-item {
     display: flex;
     align-items: center;
-    padding: 8px 19px;
+    height: 42px;
+    padding: 4px 19px;
     gap: 10px;
     border: 2px solid var(--filter-border-radius);
-    border-radius: 25px;
+    border-radius: 35px;
 }
 
 .button-item:hover {
@@ -231,12 +232,34 @@ input::placeholder{
     font-style: normal;
     font-weight: 700;
 }
+.filtres-txt {
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+}
 
 .flex-filtre2 {
     display: flex;
     align-items: center;
     gap: 10px;
     height: 24px;
+}
+
+
+.fa-info {
+   font-style: normal;
+
+}
+.cercle-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--filter-border-radius);
+    width: 23px;
+    height: 23px;
+    border-radius: 50px;
 }
 
 
@@ -339,6 +362,7 @@ input::placeholder{
 
 .populaires-cards .card-subtitle {
     margin: 0;
+    font-size: 14px;
 }
 
 .populaires-cards .card-rating {
@@ -387,19 +411,15 @@ input::placeholder{
 /* FOOTER */
 
 footer{
-   
     margin-top: 35px;
-    
 }
 
-.footer-container{
-    background-color: var(--main-bg-color);
-    margin: 0 50px;
-}
 .footer-content {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: var(--main-bg-color);
+    margin: 0 50px;
     
 }
 
@@ -434,33 +454,7 @@ footer{
 
 }
 
-/*Grid TEST*/
 
-.grid-test {
-    display: grid;
-    margin-top: 30px;
-    
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(4,auto);
-    gap: 30px;
-}
-
-.grid-test-items {
-    border-radius: 20px;
-    height: 192px;
-    background: rgb(255, 255, 255);
-   
-}
-
-.grid-test img {
-    border: 5px solid white;
-    border-radius: 20px 20px 0 0;
-    width: 100%;
-    height: 70%;
-    object-fit: cover;
-    object-position: 20% 80%;
-    box-sizing: border-box;
-}
 
 
 
@@ -471,10 +465,12 @@ footer{
 @media (max-width: 1024px) {
    
 
-    .filtres-txt, .filtres-title {
-        
+    .filtres-title {
+        font-size: 18px;
+    }
+
+    .filtres-txt {
         font-size: 16px;
-       
     }
 
     .filtres {
@@ -488,6 +484,7 @@ footer{
     
     .hebergements-and-populaires {
         flex-direction: column;
+        gap: 50px;
     }
 
     .hebergements {
@@ -499,7 +496,7 @@ footer{
     }
     .populaires {
         width: 100%;
-        margin-top: 50px;
+        
     }
 
     .populaires-cards {
@@ -579,6 +576,7 @@ footer{
     }
 
                 /* SEARCH */
+
     .main-container {
     padding: inherit;
     }
@@ -628,11 +626,14 @@ footer{
 
     .hebergements-and-populaires section {
         border-radius: 0;
+        padding:30px 20px;
     }
 
     /* Section Populaires */
 
     .populaires {
+        display: flex;
+        flex-direction: column;
         margin-top: inherit;
         gap: 15px;
     }
@@ -644,17 +645,25 @@ footer{
     }
     .populaires-cards{
         flex-direction: column;
+        gap: 15px;
     }
     .populaires-cards .card {
-        margin-top: 15px;
+        margin-top: 0px;
+
     }
 
     /* Section hebergements  */
 
     .hebergements-and-populaires .hebergements {
         background-color: white;
+        padding: 20px;
+        display: flex;
+        gap: 15px;
     }
 
+    .hebergements-and-populaires .hebergement-cards {
+        gap: 15px;
+    }
     .hebergements-and-populaires a {
     width: 100%;
     }
@@ -662,12 +671,22 @@ footer{
         width: inherit;
         height: inherit;
 
+
     }
 
     /* ACTIVITES MARSEILLE */
 
+    #card1, #card2 {
+        height: inherit;
+        padding: 20px 19px;
+    }
+
+    #card3, #card4 {
+        padding: 20px 19px;
+    }
     .activites-cards{
         flex-direction: column;
+        gap: 15px;
     }
 
     .activites-cards a {
@@ -682,5 +701,12 @@ footer{
 
     .footer-content{
         flex-direction: column;
+        gap: 50px;
+        padding: 30px;
+        margin: inherit;
+    }
+
+    .footer-section {
+        padding: 0;
     }
 }
